--- a/try.css
+++ b/try.css
@@ -67,12 +67,15 @@ body {
 button {
     -webkit-tap-highlight-color: transparent;
     outline: none;
+    border: none;
 }
 
-button:focus {
+button:focus,
+button:focus-visible {
     outline: none;
     box-shadow: none;
 }
+
 
 .question-text {
     font-size: 2.125rem;
@@ -311,5 +314,6 @@ button:focus {
         gap: 1rem;
     }
 }
+
 
 
